# needle-edge-kit

./: .env.example  .gitignore  LICENSE  README.md  package.json  requirements.txt
.github/workflows/: test.yml
desktop/: README.md  main.js  needle_bridge.py  package-lock.json  package.json  preload.js  start_wsl.ps1
desktop/host_functions/: darwin.js  index.js  oa_mock.js  windows.js
desktop/renderer/: index.html  launcher.html
desktop/scenarios/: desktop_actions.json
docs/: 00-desktop-first.md  01-quickstart.md  02-data-curation.md  03-finetuning.md  04-conversion.md  05-mobile-integration.md  06-tool-routing.md  07-oa-finetune-walkthrough.md
examples/: sample_train.jsonl
mobile/: README.md  package.json
oa_run/: ask.sh  bridge_smoke.sh  demo_inference.sh  fp_test.sh  fp_test_v3.sh  inscope_test_v3.sh  inspect.py  tiny_oa.jsonl  wsl_finetune.sh  wsl_finetune_v2.sh  wsl_finetune_v3.sh  wsl_setup.sh
scenarios/: example_smart_home.json  oa_scenarios.json  oa_scenarios_v2.json  oa_scenarios_v2_1_patch.json  oa_scenarios_v2_patch.json  oa_scenarios_v3.json
scripts/: 01_playground.ps1  02_gen_data.py  02b_review.py  03_finetune.ps1  04_convert.py  gen_parsers.py  merge_scenarios.py  run_oa_v2.ps1
tests/: contract.test.ts  electron_ipc.test.ts  host_functions.test.ts  package-lock.json  package.json  router.test.ts  scenarios.test.ts  schema.test.ts  setup.ts  tsconfig.json  vitest.config.ts
tests/python/: conftest.py  pyproject.toml  test_gen_parsers.py  test_web_server.py
tools/: example_tools.json  oa_tools.json
web/: README.md  server.py
(+10 files in other folders)
